--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.0",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "css": "^3.0.0",
